// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add a book 1`] = `
Object {
  "addBook": Object {
    "__typename": "Book",
    "author": "Matt Benton",
    "id": Any<String>,
    "rating": 1,
    "shelf": Object {
      "__typename": "BookShelf",
      "name": "Did Not Finish",
    },
    "title": "Test Book",
  },
}
`;

exports[`can fetch books by shelf 1`] = `
Object {
  "bookShelf": Object {
    "__typename": "BookShelf",
    "items": Object {
      "__typename": "BookPage",
      "items": Array [
        Object {
          "__typename": "Book",
          "title": "Test Book",
        },
      ],
    },
    "name": "Did Not Finish",
  },
}
`;

exports[`can fetch second page of books 1`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "The Damned Utd",
      },
    ],
    "nextPageCursor": Any<String>,
  },
}
`;

exports[`can fetch second page of books 2`] = `
Object {
  "books": Object {
    "__typename": "BookPage",
    "hasNextPage": false,
    "items": Array [
      Object {
        "__typename": "Book",
        "title": "Test Book",
      },
    ],
    "nextPageCursor": null,
  },
}
`;

exports[`can import external book 1`] = `
Object {
  "importExternalBook": Object {
    "__typename": "Book",
    "author": "David Peace",
    "externalId": "googlebooks:CkVF9cg8daMC",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "Reading",
    },
    "title": "The Damned Utd",
  },
}
`;

exports[`can mutate title on book without change to other fields 1`] = `
Object {
  "updateBook": Object {
    "__typename": "Book",
    "author": "Matt Benton",
    "externalId": null,
    "image": null,
    "notes": null,
    "rating": 1,
    "title": "Test Book 2",
  },
}
`;

exports[`can query single book 1`] = `
Object {
  "book": Object {
    "__typename": "Book",
    "author": "Matt Benton",
    "id": Any<String>,
    "rating": 1,
    "shelf": Object {
      "__typename": "BookShelf",
      "id": "DidNotFinish",
      "name": "Did Not Finish",
    },
    "title": "Test Book",
  },
}
`;

exports[`can search for external books 1`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 2`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 3`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 4`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 5`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 6`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 7`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 8`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 9`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;

exports[`can search for external books 10`] = `
Object {
  "__typename": "ExternalBook",
  "id": StringMatching /\\^googlebooks:/,
  "title": Any<String>,
}
`;
